--- a/templates/components/_art.html.j2
+++ b/templates/components/_art.html.j2
@@ -1,29 +1,27 @@
-<!-- Tour -->
+<!-- Theater -->
 
 <article class="art-gallery section">
 <div class="container">
   <h2 class="section-title">
-    <a href="http://buntport.com/archive/archive.htm" class="title-link">
-      Watch the show ▼
+    <a href="https://oddbooksapp.com/book/10-myths" class="title-link">
+      Read the stage adaptation »
     </a>
   </h2>
 
   <div class="art-info">
     <h3>
-      <a href="http://buntport.com/archive/archive.htm">
-        <b>10 Myths</b>
-        on the
-        <b>Proper Application</b>
-        of
-        <b>Beauty Products</b>
-      </a>
+      10 Myths
+      on the
+      Proper Application
+      of
+      Beauty Products
     </h3>
     <p>
       <strong>March 4-26, 2016</strong> —
       <a href="http://buntport.com/archive/archive.htm">Buntport Theater</a>
       and
       <a href="http://teacupgorilla.com">Teacup Gorilla</a>
-      have been collaborating on
+      collaborated on
       a live performance
       that adapts and supplements
       the novel.
