--- a/templates/components/_tour.html.j2
+++ b/templates/components/_tour.html.j2
@@ -23,49 +23,32 @@
       and cozy house readings.
     </p>
     <ul class="simple">
-      <li>
-        <strong>1/10-11</strong> in <strong>New York, <span class="caps">NY</span></strong> <br>
-        hangin’ out,
-        unless you want to <a class="reference external" href="http://miriamsuzanne.com/contact/">schedule something</a>?
-      </li>
-      <li>
-        <strong>1/12</strong> in <strong>New York, <span class="caps">NY</span></strong> <br>
-        enjoying the <a class="reference external" href="https://www.meetup.com/gothamsass/events/235946893/">Gotham Sass</a>&nbsp;meetup
-      </li>
-      <li>
-        <strong>1/13</strong> in <strong>New York, <span class="caps">NY</span></strong> <br>
-        house reading with <a class="reference external" href="http://www.theoperatingsystem.org/">The Operating System</a>
-        (details&nbsp;<span class="caps">TBA</span>)
-      </li>
-      <li>
-        <strong>1/14</strong> in <strong>Philadelphia, <span class="caps">PA</span></strong> <br>
-        enjoying the <a class="reference external" href="http://www.housework-at-chapterhouse.com/readings.html">Chapterhouse</a> reading
-        by CAConrad and Brian&nbsp;Teare&#8203;
-      </li>
-      <li>
-        <strong>1/15</strong> in <strong>Washington, <span class="caps">DC</span></strong> <br>
-        reading at <a class="reference external" href="https://www.facebook.com/events/641655696042941/">in your ear</a> with <a class="reference external" href="https://flowersintheirmouths.com/">Valerie Hsiung</a>
-        (3pm @ <a class="reference external" href="http://www.dcartscenter.org"><span class="caps">DC</span> Arts Center</a>)
-      </li>
-      <li>
-        <strong>1/16-17</strong> in <strong>Baltimore, <span class="caps">MD</span></strong> <br>
-        hangin’ out,
-        unless you want to <a class="reference external" href="http://miriamsuzanne.com/contact/">schedule something</a>?
-      </li>
-      <li>
-        <strong>1/19</strong> in <strong>Fredrick, <span class="caps">MD</span></strong> <br>
-        house reading with Aaron Angello
-        (details&nbsp;<span class="caps">TBA</span>)
-      </li>
-      <li>
-        <strong>1/20-21</strong> in <strong>Washington, <span class="caps">DC</span></strong> <br>
-        <a class="reference external" href="https://www.womensmarch.com/">protest</a> against <a class="reference external" href="http://miriamsuzanne.com/2017/01/01/2017/">bigotry in&nbsp;government</a>
-      </li>
-      <li>
-        <strong>1/23</strong> in <strong>Charlottesville, <span class="caps">VA</span></strong> <br>
-        speaking at <a class="reference external" href="http://scholarslab.org/"><span class="caps">UVA</span> Scholars’ Lab</a>
-        (details&nbsp;<span class="caps">TBA</span>)
-      </li>
+    <li><strong>1/12</strong> in <strong>New York, <span class="caps">NY</span></strong> (talk) <br>
+    “Code Patterns for Pattern Making” at <a class="reference external" href="https://www.meetup.com/gothamsass/events/235946893/">Gotham Sass</a> <br>
+    7pm @ 127 West 26th Street, 2nd floor&nbsp;(Signpost)</li>
+    <li><strong>1/13</strong> in <strong>Brooklyn, <span class="caps">NY</span></strong> (reading) <br>
+    <a class="reference external" href="https://www.facebook.com/events/306828783046470/">The Operating System</a> <br>
+    7:30pm @ 141 Spencer St&nbsp;#203</li>
+    <li><strong>1/14</strong> in <strong>Philadelphia, <span class="caps">PA</span></strong> (passing through) <br>
+    Maybe listening to CAConrad and Brian Teare&#8203;
+    read at <a class="reference external" href="http://www.housework-at-chapterhouse.com/readings.html">Chapterhouse</a>…?</li>
+    <li><strong>1/15</strong> in <strong>Washington, <span class="caps">DC</span></strong> (reading) <br>
+    <a class="reference external" href="https://www.facebook.com/events/641655696042941/">in your ear</a> with <a class="reference external" href="https://flowersintheirmouths.com/">Valerie Hsiung</a> <br>
+    3pm @ <a class="reference external" href="http://www.dcartscenter.org"><span class="caps">DC</span> Arts&nbsp;Center</a></li>
+    <li><strong>1/17</strong> in <strong>Baltimore, <span class="caps">MD</span></strong> (hangin’) <br>
+    Hit me up,&nbsp;yeah?</li>
+    <li><strong>1/18</strong> in <strong>Silver Spring, <span class="caps">MD</span></strong> (reading) <br>
+    At a house,&nbsp;somewhere.</li>
+    <li><strong>1/19</strong> in <strong>Fredrick, <span class="caps">MD</span></strong> (reading) <br>
+    Small Rain #2 with Aaron Angello <br>
+    7pm @ 415 Biggs Avenue, First&nbsp;Floor</li>
+    <li><strong>1/20</strong> in <strong>Washington, <span class="caps">DC</span></strong> (avoidance) <br>
+    Don’t get out of bed. Don’t turn on a&nbsp;<span class="caps">TV</span>.</li>
+    <li><strong>1/21</strong> in <strong>Washington, <span class="caps">DC</span></strong> (protest) <br>
+    <a class="reference external" href="https://www.womensmarch.com/">Protest</a> against <a class="reference external" href="/2017/01/01/2017/">bigotry in&nbsp;government</a>.</li>
+    <li><strong>1/23</strong> in <strong>Charlottesville, <span class="caps">VA</span></strong> (talk) <br>
+    “A Practical Guide to Losing Control” at <a class="reference external" href="http://scholarslab.org/"><span class="caps">UVA</span> Scholars’ Lab</a> <br>
+    Details&nbsp;<span class="caps">TBA</span></li>
     </ul>
   </div>
 </div>
